--- a/src/components/orderButton.css
+++ b/src/components/orderButton.css
@@ -13,6 +13,7 @@
   text-decoration: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
 }
 
 /* Fixed shadow slab (NEVER moves) */
