--- a/src/components/Social.css
+++ b/src/components/Social.css
@@ -22,7 +22,8 @@
   letter-spacing: 0.07em;
   font-weight: 800;
   text-align: start;
-  padding-left: 90px;
+  padding-top: 20px;
+  padding-left: 200px;
 }
 .social-img {
   height: 320px;
@@ -43,11 +44,11 @@
   /* background-color: aquamarine; */
 }
 .social-text {
-  padding-left: 20px;
+  padding-left: 40px;
   /* background-color: rgb(14, 142, 255); */
 }
 .social-name {
   color: rgb(236, 206, 149);
-  padding-left: 30px;
+  padding-left: 60px;
   font-size: 18px;
 }
