--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -41,7 +41,7 @@
 }
 
 .menu-subheader {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   font-weight: 800;
   color: #c43b23;
   text-shadow: 2.5px 2.5px 0 #ffb000;
@@ -89,6 +89,42 @@
   display: block;
   object-fit: cover; /* IMPORTANT: no distortion */
   object-position: center; /* tweak to "center top" if needed */
+}
+/* Badge */
+.menu-card {
+  position: relative;
+  overflow: visible; /* allows badge outside */
+}
+
+/* Image wrapper clips corners */
+.menu-img {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+}
+
+/* Actual image */
+.menu-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.favourite-badge {
+  position: absolute;
+  top: -50px;
+  left: -40px;
+
+  width: 120px;
+  height: auto;
+
+  z-index: 10;
+  pointer-events: none;
+
+  filter: drop-shadow(0 6px 0 rgba(43, 27, 16, 0.35));
 }
 
 /* Burger name */
