--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -19,16 +19,16 @@
 .nav-center {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+
   font-family: "Poppins", sans-serif;
   font-weight: 800;
   font-style: normal;
   color: rgb(56, 36, 21);
   font-size: 2rem;
-  gap: 1.5rem;
+  gap: 2.5rem;
 }
 .nav-center a {
-  padding: 0.4rem 0.8rem;
+  /* padding: 0.4rem 0.6rem; */
   border-radius: 999px;
   transition: background-color 0.2s ease;
   display: inline-block;
