--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,5 +5,14 @@ body {
   background-color: #f5deb3;
   overscroll-behavior: none;
   cursor: default;
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
+}
+#favourites {
+  scroll-margin-top: 200px;
+}
+#menu {
+  scroll-margin-top: 120px;
+}
+#hero {
+  scroll-margin-top: 60px;
 }
